--- a/email-notification-microservice/pom.xml
+++ b/email-notification-microservice/pom.xml
@@ -19,7 +19,12 @@
 		<lombok.version>1.18.28</lombok.version>
 		<org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-		<javax-annotation-api.version>1.3.2</javax-annotation-api.version>
+		<grpc-client-starter.version>2.15.0.RELEASE</grpc-client-starter.version>
+<!--		<javax-annotation-api.version>1.3.2</javax-annotation-api.version>-->
+<!--		<grpc-server.version>2.15.0.RELEASE</grpc-server.version>-->
+		<protobuf.version>3.25.1</protobuf.version>
+		<protobuf-plugin.version>0.6.1</protobuf-plugin.version>
+		<grpc.version>1.61.0</grpc.version>
 	</properties>
 
 	<dependencies>
@@ -82,14 +87,61 @@
 			<version>${lombok-mapstruct-binding.version}</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>javax.annotation</groupId>-->
+<!--			<artifactId>javax.annotation-api</artifactId>-->
+<!--			<version>${javax-annotation-api.version}</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>net.devh</groupId>-->
+<!--			<artifactId>grpc-server-spring-boot-starter</artifactId>-->
+<!--			<version>${grpc-server.version}</version>-->
+<!--		</dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.devh</groupId>-->
+<!--            <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>-->
+<!--            <version>2.15.0.RELEASE</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+
+
+
 		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>${javax-annotation-api.version}</version>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>annotations-api</artifactId>
+			<version>6.0.53</version>
+			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-client-spring-boot-starter</artifactId>
+			<version>${grpc-client-starter.version}</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>net.devh</groupId>-->
+<!--			<artifactId>grpc-client-spring-boot-autoconfigure</artifactId>-->
+<!--			<version>2.15.0.RELEASE</version>-->
+<!--			<scope>compile</scope>-->
+<!--		</dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.devh</groupId>-->
+<!--            <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>-->
+<!--            <version>2.15.0.RELEASE</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+    </dependencies>
 
 	<build>
+
+		<extensions>
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.7.1</version>
+			</extension>
+		</extensions>
 
 			<plugins>
 				<plugin>
@@ -103,6 +155,28 @@
 							</exclude>
 						</excludes>
 					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.xolstice.maven.plugins</groupId>
+					<artifactId>protobuf-maven-plugin</artifactId>
+					<version>${protobuf-plugin.version}</version>
+					<configuration>
+						<!--suppress UnresolvedMavenProperty -->
+						<protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
+						<pluginId>grpc-java</pluginId>
+						<!--suppress UnresolvedMavenProperty -->
+						<pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+					</configuration>
+
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>compile-custom</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 
 				<plugin>
