--- a/email-notification-microservice/src/main/resources/application.yaml
+++ b/email-notification-microservice/src/main/resources/application.yaml
@@ -19,3 +19,9 @@ server:
   port: 8081
   servlet:
     context-path: /
+
+grpc:
+  client:
+    ticketService:
+      address: localhost:8088
+      negotiation-type: plaintext
