--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
 version: '3.8'
+volumes:
+  ticket-db-data:
+  notification-db-data:
+
+
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.0.1
@@ -8,8 +13,8 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    networks:
-      - kafka-network
+#    networks:
+#      - kafka-network
 
   kafka-1:
     image: confluentinc/cp-kafka:7.0.1
@@ -18,80 +23,94 @@ services:
       - "9092:9092"
     environment:
       - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT='zookeeper:2181'
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
-      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=192
 
-    networks:
-      - kafka-network
+#    networks:
+#      - kafka-network
     depends_on:
       - zookeeper
 
+
+
   ticket-microservice:
-    build:
-      context: .
-      dockerfile: ticket-microservice/Dockerfile
+    build: ./ticket-microservice
+    container_name: ticket-microservice
+
+#    build:
+#      context: .
+#      dockerfile: ticket-microservice/Dockerfile
     ports:
-      - "8080:8080"
+      - "9095:9095"
     environment:
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ticket-db:5432/ticket-db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=root
-    networks:
-      - kafka-network
+#    networks:
+#      - kafka-network
     depends_on:
       - kafka-1
       - ticket-db
 
 
   ticket-db:
-    image: postgres:14-alpine
+    image: postgres:16.1
+    restart: always
     container_name: ticket-db
     ports:
-      - "5431:5432"
+      - "5432:5432"
     environment:
       - POSTGRES_DB=ticket-db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
       - POSTGRES_DRIVER=org.postgresql.Driver
+    volumes:
+      - ticket-db-data:/var/lib/postgresql/data
 
   email-notification-microservice:
-    build:
-      context: .
-      dockerfile: email-notification-microservice/Dockerfile
+    build: ./email-notification-microservice
+    container_name: email-notification-microservice
+#    build:
+#      context: .
+#      dockerfile: email-notification-microservice/Dockerfile
     ports:
-      - "8081:8081"
+      - "9096:9096"
     environment:
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - SPRING_DATASOURCE_URL=jdbc:postgresql://notification-db:5432/notification-db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=root
-    networks:
-      - kafka-network
+#    networks:
+#      - kafka-network
     depends_on:
       - kafka-1
       - notification-db
 
   notification-db:
-    image: postgres:14-alpine
+    image: postgres:16.1
+    restart: always
     container_name: notification-db
     ports:
-      - "5431:5432"
+      - "5433:5432"
     environment:
       - POSTGRES_DB=notification-db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
       - POSTGRES_DRIVER=org.postgresql.Driver
+    volumes:
+      - notification-db-data:/var/lib/postgresql/data
 
 
+#networks:
+#  kafka-network:
+#    driver: bridge
 
-networks:
-  kafka-network:
-    driver: bridge
+
 
 
 #version: '3.8'
