--- a/ticket-microservice/pom.xml
+++ b/ticket-microservice/pom.xml
@@ -55,6 +55,10 @@
 			<version>42.6.0</version>
 		</dependency>
 
+		<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
