--- a/ticket-microservice/src/main/resources/application.yaml
+++ b/ticket-microservice/src/main/resources/application.yaml
@@ -1,7 +1,22 @@
+server:
+  port: 9095
+
+grpc:
+  port: 9090
+
 spring:
   application:
     name: ticket-microservice
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      acks: all
+      properties:
+        enable:
+          idempotence: true
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
   datasource:
       driver-class-name: org.postgresql.Driver
@@ -14,16 +29,8 @@ spring:
       hibernate:
         ddl-auto: update
 
-
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yaml
-server:
-  port: 9095
-  servlet:
-    context-path: /
 
-#grpc:
-#  server:
-#    port: 8088
 
