--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,40 +22,31 @@ services:
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
-      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=192
+#      - KAFKA_BROKER_ID=1
+#      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+#      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+#      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092,PLAINTEXT_INTERNAL://0.0.0.0:29092
+#      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092
+#      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+#      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+#      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+      KAFKA_BROKER_ID: 1
+      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9092,OUTSIDE://0.0.0.0:29092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:9092,OUTSIDE://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-#    networks:
+
+    #    networks:
 #      - kafka-network
     depends_on:
       - zookeeper
 
-
-
-  ticket-microservice:
-    build: ./ticket-microservice
-    container_name: ticket-microservice
-
-#    build:
-#      context: .
-#      dockerfile: ticket-microservice/Dockerfile
-    ports:
-      - "9095:9095"
-    environment:
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ticket-db:5432/ticket-db
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=root
-#    networks:
-#      - kafka-network
-    depends_on:
-      - kafka-1
-      - ticket-db
 
 
   ticket-db:
@@ -65,31 +56,29 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=ticket-db
+      - POSTGRES_DB=tickets
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
       - POSTGRES_DRIVER=org.postgresql.Driver
     volumes:
       - ticket-db-data:/var/lib/postgresql/data
 
-  email-notification-microservice:
-    build: ./email-notification-microservice
-    container_name: email-notification-microservice
-#    build:
-#      context: .
-#      dockerfile: email-notification-microservice/Dockerfile
+  ticket-microservice:
+    build: ./ticket-microservice
+    container_name: ticket-microservice
     ports:
-      - "9096:9096"
+      - "9095:9095"
     environment:
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://notification-db:5432/notification-db
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka-1:9092
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ticket-db:5432/tickets
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=root
 #    networks:
 #      - kafka-network
     depends_on:
       - kafka-1
-      - notification-db
+      - ticket-db
+
 
   notification-db:
     image: postgres:16.1
@@ -98,12 +87,40 @@ services:
     ports:
       - "5433:5432"
     environment:
-      - POSTGRES_DB=notification-db
+      - POSTGRES_DB=notifications
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
       - POSTGRES_DRIVER=org.postgresql.Driver
     volumes:
       - notification-db-data:/var/lib/postgresql/data
+
+  email-notification-microservice:
+    build: ./email-notification-microservice
+    container_name: email-notification-microservice
+    ports:
+      - "9096:9096"
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka-1:9092
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://notification-db:5432/notifications
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=root
+#    networks:
+#      - kafka-network
+    depends_on:
+      - kafka-1
+      - notification-db
+
+
+  kafdrop:
+    image: obsidiandynamics/kafdrop:latest
+    ports:
+      - "9000:9000"
+    environment:
+      KAFKA_BROKERCONNECT: kafka-1:9092
+#    depends_on:
+#      kafka:
+#        condition: service_healthy
+
 
 
 #networks:
